# neuro_synth

./: .gitignore  README.md  main.py
draw_number/: CMakeLists.txt
draw_number/src/: main.c  main_ffmpeg.c
